Creación de script base sql.

--- a/modules/WSDbModel/src/main/resources/application.properties
+++ b/modules/WSDbModel/src/main/resources/application.properties
@@ -2,20 +2,15 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-c3p0.max_size=20
-c3p0.min_size=5
-c3p0.acquire_increment=1
-c3p0.idle_test_period=3000
-c3p0.max_statements=50
-c3p0.max_idle_time=0
-c3p0.url=jdbc:mysql://localhost:3306/telocambio
-c3p0.username=telocambio
-c3p0.password=telocambio
-c3p0.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:h2:/home/nacho/tmp/telocambio
+spring.datasource.username=sa
+spring.datasource.password=
+#H2 Console URL: http://localhost:8080/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 logging.file=telocambio.log
 
@@ -34,3 +29,8 @@ spring.mail.password=telocambio
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
+
+# --------------- START NARAYANA ---------------
+#Timeout 21600000 sg = 6 horas
+spring.jta.narayana.default-timeout=21600000
+# --------------- END ATOMIKOS ---------------
