--- a/modules/WSDbModel/src/main/resources/application.properties
+++ b/modules/WSDbModel/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+telocambio.security.enabled=false
+telocambio.documentation.enabled=true
 
-spring.datasource.url=jdbc:h2:/home/nacho/tmp/telocambio
+spring.datasource.url=jdbc:h2:file:/home/nacho/tmp/telocambio
 spring.datasource.username=sa
 spring.datasource.password=
 #H2 Console URL: http://localhost:8080/h2-console
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
-
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=none
 
 logging.file=telocambio.log
 
